<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_item_home" />

        <item
            android:id="@+id/aboutUsFragment"
            android:title="@string/menu_item_about_us" />

        <item
            android:id="@+id/activitiesFragment"
            android:title="@string/menu_item_activities" />

        <item
            android:id="@+id/nav_news"
            android:title="@string/menu_item_news" />

        <item
            android:id="@+id/nav_testimonials"
            android:title="@string/menu_item_testimonials" />
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/menu_item_contact_us" />
        <item
            android:id="@+id/nav_contribute"
            android:title="@string/menu_item_contribute" />
    </group>

</menu>